fixes the testing error and change the api end according to v5
